# fatal

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json
.github/workflows/: main.yaml
include/ks/: CMakeLists.txt  fatal.hpp
include/ks/fatal/detail/: CMakeLists.txt
src/: CMakeLists.txt  fatal.cpp
tests/: CMakeLists.txt  test_panic.cpp
